--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "clipboard": "^2.0.8",
+    "element-ui": "^2.15.2",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
+    "axios": "^0.21.1",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-jest": "^21.0.2",
