--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "clipboard": "^2.0.8",
     "element-ui": "^2.15.2",
+    "js-cookie": "^2.2.1",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1"
   },
