--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "dqw <761945125@qq.com>",
   "private": true,
   "scripts": {
+    "dev": "vue-cli-service serve",
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
