--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ VUE_APP_ROUTES_KEY=admin.routes
 VUE_APP_PERMISSIONS_KEY=admin.permissions
 VUE_APP_ROLES_KEY=admin.roles
 VUE_APP_USER_KEY=admin.user
-VUE_APP_SETTING_KEY=admin.setting
+VUE_APP_SETTING_KEY=admin.setting【
 VUE_APP_TBAS_KEY=admin.tabs
 VUE_APP_TBAS_TITLES_KEY=admin.tabs.titles
 VUE_APP_API_BASE_URL=http://49.234.81.14
