--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,2 @@
-WEB_BASE_URL=http://localhost:8010
-COMPUTE_BASE_URL=http://localhost:8011
+VUE_APP_WEB_BASE_URL=http://localhost:8010
+VUE_APP_COMPUTE_BASE_URL=http://localhost:8011
