--- a/.env.production
+++ b/.env.production
@@ -1,2 +1,2 @@
-WEB_BASE_URL=http://49.234.81.14:8010/
-COMPUTE_BASE_URL=http://49.234.81.14:8011/
+VUE_APP_WEB_BASE_URL=http://49.234.81.14:8010/
+VUE_APP_COMPUTE_BASE_URL=http://49.234.81.14:8011/
