--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "vue-i18n": "^8.18.2",
     "vue-router": "^3.3.4",
     "vuedraggable": "^2.23.2",
+    "vuescroll": "^4.17.3",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
